repo-social/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyx-social
  namespace: tinyx
  labels:
    app: tinyx-social
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyx-social
  template:
    metadata:
      labels:
        app: tinyx-social
    spec:
      containers:
        - name: tinyx-social
          image: registry.cri.epita.fr/charles.simon-meunier/tinyx/tinyx-repo-social:latest
          ports:
            - name: http
              containerPort: 9002
          volumeMounts:
            - mountPath: /config/
              name: application-properties
<<<<<<< HEAD
              value: tinyx-social
=======
              valueFrom:
                secretKeyRef:
                  name: tinyx-mongodb-credentials
                  key: TINYX_SOCIAL_MONGODB_USER
>>>>>>> 49088c4 (Feat(#32): configs for each service)

            - name: TINYX_SOCIAL_MONGODB_PASSWORD
              valueFrom:
                secretKeyRef:
<<<<<<< HEAD
                  name: tinyx-social-mongodb-credentials
                  key: password
                  
=======
                  name: tinyx-mongodb-credentials
                  key: TINYX_SOCIAL_MONGODB_PASSWORD

>>>>>>> 49088c4 (Feat(#32): configs for each service)
            - name: TINYX_SOCIAL_MONGODB_DATABASE
              valueFrom:
                configMapKeyRef:
                  name: tinyx-social-config
                  key: TINYX_SOCIAL_MONGODB_DATABASE

            - name: MONGODB_HOST
              valueFrom:
                configMapKeyRef:
                  name: mongodb-config
                  key: MONGODB_HOST

            - name: MONGODB_PORT
              valueFrom:
                configMapKeyRef:
                  name: mongodb-config
                  key: MONGODB_PORT
      imagePullSecrets:
        - name: tinyx-pull-secret
      volumes:
        - name: application-properties
          configMap:
            name: tinyx-social-application-properties
