repo-social/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tinyx-social
  namespace: tinyx
spec:
  selector:
    app: tinyx-social
  ports:
    - name: http
      port: 9002
      targetPort: 9002
      protocol: TCP
