repo-social/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: tinyx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /repo-social(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tinyx-social
                port:
                  number: 9002
